--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,7 @@
       "@/*": ["types/*", "src/*"]
     },
     "resolveJsonModule": true,
-    "types": [
-      "vite/client",
-      "vite-plugin-vue-layouts/client",
-      "unplugin-vue-router/client"
-    ],
+    "types": ["vite/client", "vite-plugin-vue-layouts/client", "unplugin-vue-router/client"],
     "allowJs": true,
     "strict": true,
     "strictNullChecks": true,
@@ -26,13 +22,7 @@
     "isolatedModules": true,
     "skipLibCheck": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.vue",
-    "src/**/*.jsx",
-    "types/**/*.d.ts"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue", "src/**/*.jsx", "types/**/*.d.ts"],
   "exclude": ["dist", "node_modules", "cypress"],
   "extends": "@vue/tsconfig/tsconfig.json",
   "references": [{ "path": "./tsconfig.node.json" }]
